Rework Guava/ThreeTen-Backport integration
* Rather than reflection at runtime, use optional dependencies
* Adjust classpath test cases to latest surefire